# docling_converter

./: .gitignore  LICENSE  MERMAID_IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
scripts/: claude_knowledge.py  obsidian_formatter.py  pdf_to_markdown.py
src/docling_converter/: __init__.py  cli.py  converter.py  knowledge.py  mermaid_converter.py  obsidian.py
tests/: __init__.py
